Implemented most User operations
- Adding, updating throw single ops all done
- Used bean mappers and proerty sources for JDBC and modified SQL
  appropriately
- updated API to include many bad responses and implemented
  accordingly with exceptions and controller advice
- set hikari timeout on postgres profiles to 1s to speed response
